# sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: notify-eva.yml
docs/: architecture.md  usage.md
schemas/: agent.schema.json
src/ievo_sdk/: __init__.py  cli.py
src/ievo_sdk/scaffold/: __init__.py  generator.py
src/ievo_sdk/template/: EVOLUTION_LOG.md  ROLE.md.j2  agent.yaml.j2
src/ievo_sdk/template/memory/: CONTEXT.md  DECISIONS.md  HISTORY.md  VOCABULARY.md
src/ievo_sdk/template/skills/evo/: SKILL.md
src/ievo_sdk/validate/: __init__.py  checker.py
tests/: test_scaffold.py  test_validate.py
